# mysql_wrapper

./: CMakeLists.txt  README.md
src/: connection.cpp  connection.h  prepared_statement.cpp  prepared_statement.h
